# anity

./: .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  Checklist.md  DEPENDENCY_POLICY.md  PLAN.md  README.md  VERSIONING.md
.github/workflows/: ci.yml  release.yml
_scripts/: README.txt  build-all.ps1  build-all.sh  build-native.ps1  build-native.sh  build-vulkan.sh  capture-unity-vfx-spawner.sh  compile-ui-shaders.sh  gap-audit.ps1  install-android-sdk.ps1  install-env.ps1  install-env.sh  install-macos-arm64.sh  install-vulkan-sdk.ps1  publish-cli.ps1  publish-cli.sh  run-tests.ps1  run-tests.sh  unity-api-parity.ps1  unity-api-parity.sh  verify-env.ps1  verify-env.sh
_scripts/Anity.MetadataFixups/: Anity.MetadataFixups.csproj  Program.cs  packages.lock.json
_scripts/UnityApiParity/: ApiModel.cs  ApiSurfaceComparer.cs  ApiSurfaceReader.cs  Program.cs  UnityApiParity.csproj
_scripts/UnityApiParity.Tests/: ApiParityTests.cs  UnityApiParity.Tests.csproj  packages.lock.json
_scripts/unity-vfx-spawner-probe/Assets/: UniversalRenderPipelineGlobalSettings.asset  VFXBuiltInProbeSpawnerCallbacks.cs  VFXProbeSpawnerCallbacks.cs  VFXSpawnerPlayerProbe.cs
_scripts/unity-vfx-spawner-probe/ProjectSettings/: GraphicsSettings.asset  ProjectSettings.asset  QualitySettings.asset  ShaderGraphSettings.asset  VFXManager.asset
anity-agent/src/Anity.Agent/: Anity.Agent.csproj  packages.lock.json
anity-agent/tests/Anity.Agent.Tests/: AgentAuditTests.cs  AgentConnectionTests.cs  AgentCredentialAndPermissionTests.cs  AgentRuntimeTests.cs  Anity.Agent.Tests.csproj
anity-cli/src/Anity.Cli/: Anity.Cli.csproj  CliHost.cs  CommandLineArgs.cs  Program.cs
anity-cli/tests/Anity.Cli.Tests/: Anity.Cli.Tests.csproj  CliDistributionTests.cs  CliLogFileTests.cs  CommandLineArgsTests.cs
anity-editor/: README.md
anity-editor/.github/workflows/: build.yml
anity-editor/src/Anity.Editor.Host/: Anity.Editor.Host.csproj  Program.cs
anity-editor/tests/Anity.Editor.Host.Tests/: ActiveEditorTrackerTests.cs  AgentAuditLogTests.cs  AgentEditorTests.cs  AnimatedValuesTests.cs  AnimationModeTests.cs  AnimationUtilityTests.cs  AnimatorControllerGraphTests.cs  AnimatorWindowControllerTests.cs  AnimatorWindowTransitionTests.cs  Anity.Editor.Host.Tests.csproj  AssemblyReloadEventsTests.cs  GameObjectRecorderTests.cs  MonoScriptTests.cs
anity-hub/: .editorconfig  .gitattributes  README.md
anity-hub/.github/workflows/: build.yml
anity-hub/manifests/: example.manifest.json
anity-hub/src/Anity.Hub/: Anity.Hub.csproj  Program.cs
anity-lib-core/: Directory.Build.props  README.md  UnityCompat.md
anity-lib-core/.github/workflows/: build.yml
anity-lib-core/src/Anity.Core/: Anity.Core.asmdef  Anity.Core.csproj  AssemblyInfo.cs  packages.lock.json
anity-lib-core/src/Anity.Core.Analyzers/: Anity.Core.Analyzers.csproj  AotCompatibilityAnalyzer.cs  Directory.Build.props  UnityApiCompatibilityAnalyzer.cs
anity-lib-core/src/Anity.Core.Unity/: Anity.Core.Unity.csproj
anity-lib-core/tests/Anity.AB.Compare.Tests/: Anity.AB.Compare.Tests.csproj  BehaviorCompareTests.cs  BinaryCompareTests.cs
anity-lib-core/tests/Anity.Core.Tests/: AddressablesTests.cs  AnimationCurveAndMathDepthTests.cs  Anity.Core.Tests.csproj  AssetBundleAsyncRequestTests.cs  AssetBundleBuildAddressableTests.cs  AssetBundleBuildVariantTests.cs  AssetBundleImporterBuildTests.cs  CanvasTests.cs  (+111 more)
anity-native/: CMakeLists.txt
anity-native/build-ci/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
anity-native/include/anity/: anity_core.h  anity_export.h
anity-native/include/anity/animation/: anity_animation_pose.h  anity_avatar.h  anity_avatar_mask.h  anity_human_trait.h
anity-native/include/anity/audio/: anity_audio.h
anity-native/include/anity/graphics/: anity_graphics.h  anity_hdr.h
anity-native/include/anity/jobs/: anity_jobs.h
anity-native/include/anity/math/: anity_matrix.h
anity-native/include/anity/media/: anity_media.h
anity-native/include/anity/model/: anity_model_import.h
anity-native/include/anity/physics/: anity_physics.h
anity-native/include/anity/texture/: anity_texture_compress.h
anity-native/include/anity/transform/: anity_transform.h
anity-native/include/anity/ui/: anity_ui_renderer.h
anity-native/src/animation/: anity_animation_pose.cpp  anity_avatar.cpp  anity_avatar_mask.cpp  anity_human_trait.cpp
anity-native/src/audio/: anity_audio.cpp
anity-native/src/core/: anity_core.cpp
anity-native/src/graphics/: anity_graphics.cpp  anity_graphics_device.h  anity_graphics_texture.cpp  anity_graphics_texture_internal.h  anity_graphics_ui.cpp  anity_graphics_vfx.cpp  anity_hdr.cpp
anity-native/src/graphics/backends/: d3d11_backend.cpp  metal_backend.mm  metal_backend_stub.cpp  null_backend.cpp  vulkan_backend.cpp
anity-native/src/graphics/shaders/: anity_camera_mesh.frag  anity_camera_mesh.vert  anity_camera_mesh_spirv.h  anity_depth_copy.comp  anity_depth_copy_msaa.comp  anity_depth_copy_msaa_spirv.h  anity_depth_copy_spirv.h  anity_ui.frag  anity_ui.vert  anity_ui_spirv.h
anity-native/src/jobs/: anity_jobs.cpp
anity-native/src/math/: anity_matrix.cpp
anity-native/src/media/: anity_media.cpp
anity-native/src/model/: anity_model_import.cpp
anity-native/src/physics/: anity_physics.cpp
anity-native/src/texture/: anity_texture_compress.cpp
anity-native/src/transform/: anity_transform.cpp
anity-native/src/ui/: anity_ui_renderer.cpp  anity_ui_renderer_internal.h
assets/macos/: AnityIcon.icns  Info.plist
docs/: architecture.md  ci.md  ops.md  unity-compat-roadmap.md
parity-evidence/: unity-api-parity-baseline.json  unity-vfx-spawner-2022.3.51f1.json
samples/URP3DDemo/: DemoScene.cs  DemoScripts.cs  DemoUI.cs  Program.cs  URP3DDemo.csproj
scripts/: README.md  bootstrap-repo.ps1  bootstrap-repo.sh  bootstrap-workspace.ps1  bootstrap-workspace.sh  create-anity-org-repos.ps1  create-anity-org-repos.sh  run-compare-tests.ps1  switch-mode.ps1  sync-modules.ps1  sync-modules.sh  unity-compat-audit.ps1  unity-compat-audit.sh
(+468 files in other folders)
